fix continue on quiz when no option selected
- the button is not visible now until one option is selected on the info view

--- a/src/renderer/src/assets/components.css
+++ b/src/renderer/src/assets/components.css
@@ -45,6 +45,14 @@
     transform: scale(0.98);
 }
 
+
+.continueButtonDisabled {
+    display: none;
+    /*background-color: #b1b1b1;
+    color: #4D4D4D;
+    border: 0.4629629vw #868686 solid;*/
+}
+
 .completeButton {
     font-family: 'Ropa Sans';
     font-size: 3.7962962vw;
